# brikell_dd_mvp

./: .env.example  .gitignore  CLAUDE.md  test_rent_roll.csv
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/agents/: llm_client.py  module_runner.py  orchestrator.py  parser.py  reconciler.py
backend/app/chat/: router.py  schemas.py  service.py
backend/app/documents/: missing.py  router.py  schemas.py  service.py
backend/app/inputs/: router.py  schemas.py  service.py
backend/app/modules/: definitions.py  router.py  schemas.py
backend/app/parser/: dd_gap_analyser.py  extractor.py
backend/app/projects/: router.py  schemas.py  service.py
backend/app/reports/: router.py  service.py
backend/scripts/: init_db.py  reparse_and_reconcile.py
backend/templates/: report.css  report.html
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: FileUpload.tsx  MissingDocsChecklist.tsx  Sidebar.tsx  WorkflowStepper.tsx
frontend/src/features/chat/: AIAssistant.tsx
frontend/src/features/projects/: ProjectCreate.tsx  ProjectDetail.tsx  ProjectList.tsx
frontend/src/features/workflow/: DDReadiness.tsx  DocumentsTab.tsx  InputsTab.tsx  ModulesTab.tsx  ReportTab.tsx  ReviewTab.tsx
scripts/: init_db.py  seed_demo.py
